src/Components/Post/post.css
:root {
  --postPadding: 10px;
  --popupAmount: -2px;
}
.postContainer {
  position: relative;
}
.postMoreMenu {
  .moreMenu {
    top: calc(var(--postPadding) + var(--popupAmount));
    right: 10px;
  }
}
.post {
  background-color: #1e1e2e;
  border-radius: 4px;
  display: grid;
  grid-template:
    "profilePicture userInfo userInfo userInfo moreArea"
    "profilePicture postText postText postText postText"
    "profilePicture interactions interactions interactions interactions" / 44px auto auto 33px 33px;
  padding: var(--postPadding);
  gap: 0.5em;
  transition: all 0.2s;
  &:hover {
    transform: translateY(var(--popupAmount));
    box-shadow: 0 2px 0 #89b4fa;
    cursor: pointer;
    background-color: #212132;
  }
  &.active {
    transform: translateY(var(--popupAmount));
    box-shadow: 0 2px 0 #89b4fa;
    background-color: #212132;
  }
  .profilePictureWrapper {
    grid-area: profilePicture;
    display: flex;
    flex-direction: column;
    align-items: center;
    .profilePicture {
      background-color: #313244;
      height: 40px;
      width: 40px;
      border-radius: 8px;
    }
  }
  .userInfo {
    display: flex;
    align-items: center;
    grid-area: userInfo;
    .displayName {
      font-weight: 600;
      margin-right: 0.2em;
      font-size: 0.9em;
    }
    .username {
      color: #7f849c;
      font-size: 0.9em;
      font-family: "Ubuntu Variable", sans-serif;
    }
    .dateSeparator {
      -webkit-user-select: none;
      user-select: none;
      color: #7f849c;
      margin: 0px 4px;
    }
    .dateInfo {
      color: #bac2de;
      font-size: 0.78em;
      position: relative;
      display: inline-block;
      .dateTooltip {
        visibility: hidden;
        background-color: rgba(17, 17, 27, 0.4);
        color: inherit;
        text-align: center;
        padding: 10px 0;
        border-radius: 4px;
        position: absolute;
        z-index: 1;
        width: 240px;
        bottom: 100%;
        left: 50%;
        margin-left: -120px;
        opacity: 0;
        transition: opacity 0.2s 0.3s ease;
      }
      &:hover .dateTooltip {
        visibility: visible;
        opacity: 1;
      }
    }
  }
  .moreArea {
    display: flex;
    justify-content: end;
    .moreButton {
      background-color: inherit;
      border: none;
      color: inherit;
      border-radius: 4px;
      padding: 4px;
      &:hover {
        cursor: pointer;
        background-color: #313244;
      }
    }
  }
  .postText {
    font-size: 0.9em;
    grid-area: postText;
    word-break: break-word;
    white-space: pre-wrap;
  }
  .interactions {
    grid-area: interactions;
    display: grid;
    grid-template-columns: auto auto auto;
    align-items: center;
    justify-items: flex-start;
    margin-top: 0.4em;
    button {
      padding: 4px;
      background-color: inherit;
      border: none;
      border-radius: 4px;
      color: inherit;
      transition: background-color 0.2s ease;
      display: flex;
      align-items: center;
      justify-content: left;
      .counter {
        font-size: 0.85em;
        margin-left: 0.5em;
      }
      &.likedPost svg {
        color: #f38ba8;
      }
      .kindaLiked {
        font-weight: 600;
      }
      .veryLiked {
        font-weight: 700;
      }
      .likedALot {
        font-weight: 800;
      }
      &.likeButton:hover {
        color: rgb(243, 139, 168);
        background-color: rgba(243, 139, 168, 0.1);
      }
      &.commentButton:hover {
        color: rgb(137, 180, 250);
        background-color: rgba(137, 180, 250, 0.1);
      }
      &.repostButton:hover {
        color: #a6e3a1;
        background-color: rgba(166, 227, 161, 0.1);
      }
      &:hover {
        cursor: pointer;
      }
    }
  }
}
/* .post * { */
/*   border: 1px solid #3f3f5f !important; */
/*   border-radius: 3px; */
/* } */

